--- a/templates/CustomColumnsOverride/apps.v1.replicasets.yaml
+++ b/templates/CustomColumnsOverride/apps.v1.replicasets.yaml
@@ -105,12 +105,24 @@ items:
         - jsonPath: .image
           name: Image
           type: string
-        - jsonPath: .resources
-          name: Resources
+        - jsonPath: .resources.requests
+          name: Resources requests
+          type: string
+        - jsonPath: .resources.limits
+          name: Resources limits
           type: string
       additionalPrinterColumnsTrimLengths:
         - key: Image
           value: 64
+      additionalPrinterColumnsUndefinedValues:
+        - key: Name
+          value: "-"
+        - key: Image
+          value: "-"
+        - key: Resources limits
+          value: "-"
+        - key: Resources requests
+          value: "-"
       id: factory-replicaset-details-init-containers-list
 
   - apiVersion: front.in-cloud.io/v1alpha1
