--- a/templates/CustomColumnsOverride/apps.v1.statefulsets.yaml
+++ b/templates/CustomColumnsOverride/apps.v1.statefulsets.yaml
@@ -23,12 +23,24 @@ items:
         - jsonPath: .image
           name: Image
           type: string
-        - jsonPath: .resources
-          name: Resources
+        - jsonPath: .resources.requests
+          name: Resources requests
+          type: string
+        - jsonPath: .resources.limits
+          name: Resources limits
           type: string
       additionalPrinterColumnsTrimLengths:
         - key: Image
           value: 64
+      additionalPrinterColumnsUndefinedValues:
+        - key: Name
+          value: "-"
+        - key: Image
+          value: "-"
+        - key: Resources limits
+          value: "-"
+        - key: Resources requests
+          value: "-"
       id: factory-statefulset-details-init-containers-list
 
   - apiVersion: front.in-cloud.io/v1alpha1
@@ -43,8 +55,11 @@ items:
         - jsonPath: .image
           name: Image
           type: string
-        - jsonPath: .resources
-          name: Resources
+        - jsonPath: .resources.requests
+          name: Resources requests
+          type: string
+        - jsonPath: .resources.limits
+          name: Resources limits
           type: string
         - jsonPath: .ports[*].containerPort
           name: Ports
@@ -52,6 +67,15 @@ items:
       additionalPrinterColumnsTrimLengths:
         - key: Image
           value: 64
+      additionalPrinterColumnsUndefinedValues:
+        - key: Name
+          value: "-"
+        - key: Image
+          value: "-"
+        - key: Resources limits
+          value: "-"
+        - key: Resources requests
+          value: "-"
       id: factory-statefulset-details-containers-list
 
   - apiVersion: front.in-cloud.io/v1alpha1
