--- a/templates/Factory/secret-details.yaml
+++ b/templates/Factory/secret-details.yaml
@@ -105,22 +105,6 @@ items:
                                         data:
                                           id: 21012
                                           text: "{reqs[0]['metadata', 'name']}"
-                                  - type: antdFlex
-                                    data:
-                                      id: 2102
-                                      vertical: true
-                                      gap: 4
-                                    children:
-                                      - type: antdText
-                                        data:
-                                          id: 21021
-                                          strong: true
-                                          text: "Namespace"
-                                      - type: antdLink
-                                        data:
-                                          id: 16
-                                          text: "{reqsJsonPath[0]['.metadata.namespace']['-']}"
-                                          href: "/openapi-ui/{2}/factory/namespace-details/{3}"
 
                                   - type: antdFlex
                                     data:
@@ -128,37 +112,24 @@ items:
                                       vertical: true
                                       gap: 8
                                     children:
-                                      - type: antdText
-                                        data:
-                                          id: 18
-                                          text: Labels
-                                          strong: true
-                                          style:
-                                            fontSize: 14
-                                      - type: parsedText
-                                        data:
-                                          id: 19
-                                          text: "No selector"
-                                          style:
-                                            color: red
+                                      {{ include "incloud-web-resources.factory.links.namespace-details" . | nindent 42}}
 
                                   - type: antdFlex
                                     data:
-                                      id: 29
+                                      id: 17
+                                      vertical: true
+                                      gap: 8
+                                    children:
+                                      {{ include "incloud-web-resources.factory.labels" . | nindent 42}}
+
+                                  - type: antdFlex
+                                    data:
+                                      id: 26
                                       vertical: true
                                       gap: 4
                                     children:
-                                      - type: antdText
-                                        data:
-                                          id: 30
-                                          text: Annotations
-                                          strong: true
-                                      - type: parsedText
-                                        data:
-                                          id: 31
-                                          text: "0 Annotations"
-                                          style:
-                                            color: red
+                                      {{ include "incloud-web-resources.factory.counters.annotations" . | nindent 38}}
+
 
                                   - type: antdFlex
                                     data:
@@ -166,26 +137,8 @@ items:
                                       vertical: true
                                       gap: 4
                                     children:
-                                      - type: antdText
-                                        data:
-                                          id: 3601
-                                          strong: true
-                                          text: "Created"
-                                      - type: antdFlex
-                                        data:
-                                          id: 3602
-                                          gap: 6
-                                          align: center
-                                        children:
-                                          - type: antdText
-                                            data:
-                                              id: 36021
-                                              text: "🌐"
-                                          - type: parsedText
-                                            data:
-                                              id: 36022
-                                              text: "{reqs[0]['metadata', 'creationTimestamp']}"
-                                              formatter: timestamp
+                                      {{ include "incloud-web-resources.factory.time.create" . | nindent 38}}
+
                                   - type: antdFlex
                                     data:
                                       id: 3600
