--- a/templates/Factory/argocd-application-details.yaml
+++ b/templates/Factory/argocd-application-details.yaml
@@ -115,59 +115,30 @@ items:
                                         data:
                                           id: 21012
                                           text: "{reqs[0]['metadata', 'name']}"
-                                  - type: antdFlex
-                                    data:
-                                      id: 2102
-                                      vertical: true
-                                      gap: 4
-                                    children:
-                                      - type: antdText
-                                        data:
-                                          id: 21021
-                                          strong: true
-                                          text: "Namespace"
-                                      - type: parsedText
-                                        data:
-                                          id: 21022
-                                          text: "{reqs[0]['metadata', 'namespace']}"
 
                                   - type: antdFlex
                                     data:
-                                      id: 3200
+                                      id: 17
                                       vertical: true
                                       gap: 8
                                     children:
-                                      - type: antdText
-                                        data:
-                                          id: 3201
-                                          text: "Labels"
-                                          strong: true
-                                          style:
-                                            fontSize: 14
-                                      - type: antdText
-                                        data:
-                                          id: 3202
-                                          text: "No selector"
-                                          # style:
-                                          #   color: "#FF0000"
+                                      {{ include "incloud-web-resources.factory.links.namespace-details" . | nindent 42}}
 
                                   - type: antdFlex
                                     data:
-                                      id: 3400
+                                      id: 17
+                                      vertical: true
+                                      gap: 8
+                                    children:
+                                      {{ include "incloud-web-resources.factory.labels" . | nindent 42}}
+
+                                  - type: antdFlex
+                                    data:
+                                      id: 26
                                       vertical: true
                                       gap: 4
                                     children:
-                                      - type: antdText
-                                        data:
-                                          id: 34000
-                                          strong: true
-                                          text: "Annotations"
-                                      - type: antdText
-                                        data:
-                                          id: 3401
-                                          text: "3 Annotations"
-                                          # style:
-                                          #   color: "#FF0000"
+                                      {{ include "incloud-web-resources.factory.counters.annotations" . | nindent 38}}
 
                                   - type: antdFlex
                                     data:
@@ -175,26 +146,8 @@ items:
                                       vertical: true
                                       gap: 4
                                     children:
-                                      - type: antdText
-                                        data:
-                                          id: 3601
-                                          strong: true
-                                          text: "Created"
-                                      - type: antdFlex
-                                        data:
-                                          id: 3602
-                                          gap: 6
-                                          align: center
-                                        children:
-                                          - type: antdText
-                                            data:
-                                              id: 36021
-                                              text: "🌐"
-                                          - type: parsedText
-                                            data:
-                                              id: 36022
-                                              text: "{reqs[0]['metadata', 'creationTimestamp']}"
-                                              formatter: timestamp
+                                      {{ include "incloud-web-resources.factory.time.create" . | nindent 38}}
+
 
                           - type: antdCol
                             data:
