--- a/templates/Factory/deployment-details.yaml
+++ b/templates/Factory/deployment-details.yaml
@@ -124,22 +124,6 @@ items:
                                           id: 13
                                           text: "{reqsJsonPath[0]['.metadata.name']['-']}"
 
-                                  - type: antdFlex
-                                    data:
-                                      id: 14
-                                      vertical: true
-                                      gap: 4
-                                    children:
-                                      - type: antdText
-                                        data:
-                                          id: 15
-                                          text: Namespace
-                                          strong: true
-                                      - type: antdLink
-                                        data:
-                                          id: 16
-                                          text: "{reqsJsonPath[0]['.metadata.namespace']['-']}"
-                                          href: "/openapi-ui/{2}/factory/namespace-details/{3}"
 
                                   - type: antdFlex
                                     data:
@@ -147,113 +131,56 @@ items:
                                       vertical: true
                                       gap: 8
                                     children:
-                                      - type: antdText
-                                        data:
-                                          id: 18
-                                          text: Labels
-                                          strong: true
-                                          style:
-                                            fontSize: 14
-                                      - type: parsedText
-                                        data:
-                                          id: 19
-                                          text: "No selector"
-                                          style:
-                                            color: red
+                                      {{ include "incloud-web-resources.factory.links.namespace-details" . | nindent 42}}
+
                                   - type: antdFlex
                                     data:
-                                      id: 20
+                                      id: 17
                                       vertical: true
-                                      gap: 4
+                                      gap: 8
                                     children:
-                                      - type: antdText
-                                        data:
-                                          id: 21
-                                          text: Node selector
-                                          strong: true
-                                      - type: parsedText
-                                        data:
-                                          id: 22
-                                          text: "No selector"
-                                          style:
-                                            color: red
+                                      {{ include "incloud-web-resources.factory.labels" . | nindent 42}}
+
                                   - type: antdFlex
                                     data:
                                       id: 23
                                       vertical: true
                                       gap: 4
                                     children:
-                                      - type: antdText
-                                        data:
-                                          id: 24
-                                          text: Pod selector
-                                          strong: true
-                                      - type: parsedText
-                                        data:
-                                          id: 25
-                                          text: "No selector"
-                                          style:
-                                            color: red
+                                      {{ include "incloud-web-resources.factory.labels.base.node.selector" . | nindent 38}}
+
+                                  - type: antdFlex
+                                    data:
+                                      id: 23
+                                      vertical: true
+                                      gap: 4
+                                    children:
+                                      {{ include "incloud-web-resources.factory.labels.base.pod.selector" . | nindent 38}}
+
+                                  - type: antdFlex
+                                    data:
+                                      id: 23
+                                      vertical: true
+                                      gap: 4
+                                    children:
+                                      {{ include "incloud-web-resources.factory.counters.template.tolerations" . | nindent 38}}
+
                                   - type: antdFlex
                                     data:
                                       id: 26
                                       vertical: true
                                       gap: 4
                                     children:
-                                      - type: antdText
-                                        data:
-                                          id: 27
-                                          text: Tolerations
-                                          strong: true
-                                      - type: parsedText
-                                        data:
-                                          id: 28
-                                          text: "0 Tolerations"
-                                          style:
-                                            color: red
+                                      {{ include "incloud-web-resources.factory.counters.annotations" . | nindent 38}}
+
                                   - type: antdFlex
                                     data:
-                                      id: 29
+                                      id: 3600
                                       vertical: true
                                       gap: 4
                                     children:
-                                      - type: antdText
-                                        data:
-                                          id: 30
-                                          text: Annotations
-                                          strong: true
-                                      - type: parsedText
-                                        data:
-                                          id: 31
-                                          text: "0 Annotations"
-                                          style:
-                                            color: red
-                                  - type: antdFlex
-                                    data:
-                                      id: 32
-                                      vertical: true
-                                      gap: 4
-                                    children:
-                                      - type: antdText
-                                        data:
-                                          id: 33
-                                          text: Created
-                                          strong: true
-                                      - type: antdFlex
-                                        data:
-                                          id: 34
-                                          gap: 6
-                                          align: center
-                                        children:
-                                          - type: antdText
-                                            data:
-                                              id: 35
-                                              text: "🌐"
-                                          - type: parsedText
-                                            data:
-                                              id: 36
-                                              text: "{reqsJsonPath[0]['.metadata.creationTimestamp']['-']}"
-                                              formatter: timestamp
+                                      {{ include "incloud-web-resources.factory.time.create" . | nindent 42}}
+                                          
                                   - type: antdFlex
                                     data:
                                       id: 37
