--- a/templates/Sidebar/stock-project-factory/argocd-application-details.yaml
+++ b/templates/Sidebar/stock-project-factory/argocd-application-details.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.gitops.argocd.enable  }}
+{{- if .Values.addons.argocd.enabled  }}
 ---
 apiVersion: front.in-cloud.io/v1alpha1
 kind: Sidebar
